--- a/manuals/developer-guide/src/main/asciidoc/topoprocessing/odl-topoprocessing-link-computation-dev.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/topoprocessing/odl-topoprocessing-link-computation-dev.adoc
@@ -1,8 +1,126 @@
-==== Overview
-During creation of overlay topology, informations about links between nodes are lost. These informations have to be recalculated. Feature odl-topoprocessing-link-computation contains logic required for recalculation of links between nodes.
+==== Chapter Overview
+During the topology request processing, we create overlay nodes with lists of supporting underlay nodes. Because these overlay nodes have completely new identifiers, we lose link information. To regain this link information, we provide Link Computation functionality. Its main purpose is to create new overlay links based on the links from the underlay topologies and underlay items from overlay items. The required information for Link Computation is provided via the Link Computation model in (https://git.opendaylight.org/gerrit/gitweb?p=topoprocessing.git;a=blob;f=topoprocessing-api/src/main/yang/topology-link-computation.yang;hb=refs/heads/stable/beryllium[topology-link-computation.yang]).
 
-==== Link computation model
-Here will be link computation model
+==== Link Computation Functionality
+Let us consider two topologies with following components:
 
-==== Link computation calculation
-Here will be desription of link calculation
+Topology 1:
+
+* Node: `node:1:1`
+* Node: `node:1:2`
+* Node: `node:1:3`
+* Link: `link:1:1` (from `node:1:1` to `node:1:2`)
+* Link: `link:1:2` (from `node:1:3` to `node:1:2`)
+
+Topology 2:
+
+* Node: `node:2:1`
+* Node: `node:2:2`
+* Node: `node:2:3`
+* Link: `link:2:1` (from `node:2:1` to `node:2:3`)
+
+Now let's say that we applied some operations over these topologies that results into aggregating together
+
+* `node:1:1` and `node:2:3` (`node:1`)
+* `node:1:2` and `node:2:2` (`node:2`)
+* `node:1:3` and `node:2:1` (`node:3`)
+
+At this point we can no longer use available links in new topology because of the node ID change, so we must create new overlay links with source and destination node set to new nodes IDs. It means that `link:1:1` from topology 1 will create new link `link:1`. Since original source (`node:1:1`) is already aggregated under `node:1`, it will became source node for `link:1`. Using same method the destination will be `node:2`. And the final output will be three links:
+
+* `link:1`, from `node:1` to `node:2`
+* `link:2`, from `node:3` to `node:2`
+* `link:3`, from `node:3` to `node:1`
+
+.Overlay topology with computed links
+image::topoprocessing/LinkComputation.png[width=461]
+
+==== In-Depth Look
+The main logic behind Link Computation is executed in the LinkCalculator operator. The required information is passed to LinkCalculator through the LinkComputation section of the topology request. This section is defined in the topology-link-computation.yang file. The main logic also covers cases when some underlay nodes may not pass through other topology operators.
+
+===== Link Computation Model
+There are three essential pieces of information for link computations. All of them are provided within the LinkComputation section. These pieces are:
+
+* output model
+
+[source, yang]
+----
+leaf output-model {
+    type identityref {
+        base topo-corr:model;
+    }
+    description "Desired output model for computed links.";
+}
+----
+
+* overlay topology with new nodes
+
+[source, yang]
+----
+container node-info {
+    leaf node-topology {
+        type string;
+        mandatory true;
+        description "Topology that contains aggregated nodes.
+                     This topology will be used for storing computed links.";
+    }
+    uses topo-corr:input-model-grouping;
+}
+----
+
+* underlay topologies with original links
+
+[source, yang]
+----
+list link-info {
+    key "link-topology input-model";
+    leaf link-topology {
+        type string;
+        mandatory true;
+        description "Topology that contains underlay (base) links.";
+    }
+    leaf aggregated-links {
+        type boolean;
+        description "Defines if link computation should be based on supporting-links.";
+    }
+    uses topo-corr:input-model-grouping;
+}
+----
+
+This whole section is augmented into `network-topology:topology`. By placing this section out of correlations section, it allows us to send link computation request separately from topology operations request.
+
+===== Main Logic
+Taking into consideration that some of the underlay nodes may not transform into overlay nodes (e.g. they are filtered out), we created two possible states for links:
+
+* matched - a link is considered as matched when both original source and destination node were transformed to overlay nodes
+* waiting - a link is considered as waiting if original source, destination or both nodes are missing from the overlay topology
+
+All links in waiting the state are stored in waitingLinks list, already matched links are stored in matchedLinks list and overlay nodes are stored in the storedOverlayNodes list. All processing is based only on information in these lists.
+Processing created, updated and removed underlay items is slightly different and described in next sections separately. 
+
+*Processing Created Items*
+
+Created items can be either nodes or links, depending on the type of listener from which they came. In the case of a link, it is immediately added to waitingLinks and calculation for possible overlay link creations (calculatePossibleLink) is started. The flow diagram for this process is show in the following picture:
+
+.Flow diagram of processing created items
+image::topoprocessing/LinkComputationFlowDiagram.png[width=500]
+
+Searching for the source and destination nodes in the calculatePossibleLink method runs over each node in storedOverlayNodes and the ids of each supporting node is compared against ids from the underlay link's source and destination nodes. If there are any nodes missing, the link remains in the waiting state. If both the source and destination nodes are found, the corresponding overlay nodes is recorded as the new source and destination. The link is then removed from waitingLinks and a new CalculatedLink is added to the matched links. At the end, the new link (if it exists) is written into the datastore.
+
+If the created item is an overlayNode, this is added to storedOverlayNodes and we call calculatePossibleLink for every link in waitingLinks. 
+
+*Processing Updated Items*
+
+The difference from processing created items is that we have three possible types of updated items: overlay nodes, waiting underlay links, and matched underlay links.
+
+* In the case of a change in a matched link, this must be recalculated and based the result it will either be matched with new source and destination or will be returned to waiting links. If the link is moved back to a waiting state, it must also be removed from the datastore.
+* In the case of change in a waiting link, it is passed to the calculation process and based on the result will either remain in waiting state or be promoted to the matched state.
+* In the case of a change in an overlay node, storedOverlayNodes must be updated properly and all links must be recalculated in case of changes.
+
+*Processing Removed items*
+
+Same as for processing updated item there can be three types of removed items:
+
+* In case of waiting link removal, the link is just removed from waitingLinks
+* In case of matched link removal, the link is removed from matchingLinks and datastore
+* In case of overlay node removal, the node must be removed form storedOverlayNodes and all matching links must be recalculated
+
